[gd_scene load_steps=12 format=3]

[ext_resource type="Script" path="res://Script/LDL/Decompose.gd" id="1"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="2"]
[ext_resource type="Texture2D" uid="uid://3kuuo6xhsvf8" path="res://Art/Game_2/Ldl/212.png" id="3"]
[ext_resource type="PackedScene" uid="uid://b3qof5s6nwscy" path="res://Scene/BackPack/Box_1.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://cdvrhs05072y3" path="res://Art/Level/Challenge/ui_beizhan_diaoluodi.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cacnicqunqgm7" path="res://Art/LDL/171.png" id="6"]
[ext_resource type="Texture2D" uid="uid://jewxawsne286" path="res://Art/LDL/fjbuton1.png" id="7"]
[ext_resource type="Texture2D" uid="uid://o3n3ot8ohc6t" path="res://Art/LDL/fjbuton2.png" id="8"]
[ext_resource type="Texture2D" uid="uid://uaufihqdbpsa" path="res://Art/LDL/176.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cguaxdpr2mbqt" path="res://Art/Shop/46.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cs4rnpphreaep" path="res://Art/Game_2/Ldl/198.png" id="11"]

[node name="Decompose" type="Node2D"]
script = ExtResource( "1" )

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.976471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 32
text = "物品分解"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Title2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 141.0
offset_right = 102.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.964706, 0.403922, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 24
text = "将会获得"
horizontal_alignment = 1
vertical_alignment = 1

[node name="scw" type="Sprite2D" parent="."]
position = Vector2(134, 75)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="RemoveItems" parent="scw" instance=ExtResource( "4" )]
offset_left = -26.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = 25.0
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 27.0
offset_top = 177.0
offset_right = 296.0
offset_bottom = 316.0
texture = ExtResource( "5" )
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect4" type="TextureRect" parent="TextureRect3"]
layout_mode = 0
offset_left = 269.0
offset_top = 141.0
offset_right = 575.0
offset_bottom = 281.0
rotation = -3.14159
texture = ExtResource( "5" )
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 15.0
offset_top = 187.0
offset_right = 280.0
offset_bottom = 322.0
metadata/_edit_lock_ = true

[node name="ItemList" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 20
columns = 4

[node name="jt_" type="Sprite2D" parent="."]
position = Vector2(134, 158)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="DecomposeButton" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = 326.0
offset_right = 160.0
offset_bottom = 374.0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="need_lh" type="Sprite2D" parent="DecomposeButton"]
position = Vector2(190, 23)
texture = ExtResource( "9" )

[node name="lh" type="Label" parent="DecomposeButton/need_lh"]
offset_left = 40.0
offset_top = -12.0
offset_right = 80.0
offset_bottom = 14.0
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="46" type="Sprite2D" parent="DecomposeButton"]
show_behind_parent = true
position = Vector2(104, 55)
texture = ExtResource( "10" )
metadata/_edit_lock_ = true

[node name="Help" type="TextureButton" parent="."]
offset_left = 177.0
offset_top = 119.0
offset_right = 305.0
offset_bottom = 163.0
texture_normal = ExtResource( "11" )
texture_pressed = ExtResource( "11" )
texture_hover = ExtResource( "11" )
texture_disabled = ExtResource( "11" )
metadata/_edit_lock_ = true

[node name="wait" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="DecomposeButton" to="." method="_on_decompose_button_pressed" flags=18]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed" flags=18]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout" flags=18]
